<package format="2">
  <name>diagnostic_updater</name>
  <version>2.1.3</version>
  <description>diagnostic_updater contains tools for easily updating diagnostics. it is commonly used in device drivers to keep track of the status of output topics, device status, etc.</description>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <maintainer email="karsten.knese@us.bosch.com">Karsten Knese</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/diagnostic_updater</url>

  <author>Jeremy Leibs</author>
  <author>Blaise Gassend</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
