<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diagnostic_updater</name>
  <version>3.1.2</version>
  <description>diagnostic_updater contains tools for easily updating diagnostics. it is commonly used in device drivers to keep track of the status of output topics, device status, etc.</description>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <maintainer email="Christian.Henkel2@de.bosch.com">Christian Henkel</maintainer>
  <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">http://www.ros.org/wiki/diagnostic_updater</url>

  <author>Jeremy Leibs</author>
  <author>Blaise Gassend</author>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
