<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>diagnostics</name>
  <version>1.9.3</version>
  <description>diagnostics</description>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <license>Apache License 2.0</license>

  <url type="website">http://www.ros.org/wiki/diagnostics</url>

  <author>Kevin Watts</author>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diagnostic_analysis</exec_depend>
  <exec_depend>diagnostic_common_diagnostics</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>self_test</exec_depend>

  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>
