<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2diagnostics</name>
  <version>3.1.2</version>
  <description>diagnostic command for ROS2 command line, parse and echo diagnostics topic</description>
  <maintainer email="robo2020@gmail.com"></maintainer>
  <maintainer email="russ@sentryrobotics.au"></maintainer>
  <maintainer email="Christian.Henkel2@de.bosch.com">Christian Henkel</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>osrf_pycommon</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
