<?xml version="1.0"?>
<package format="2">
  <name>rosdiagnostic</name>
  <version>1.9.7</version>
  <description>Command to print aggregated diagnostic contents to the command line</description>

  <author email="gautran@clearpath.ai">Guillaume Autran</author>
  <maintainer email="gautran@clearpath.ai">Guillaume Autran</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

</package>
