<package>
  <name>self_test</name>
  <version>1.10.4</version>
  <description>self_test</description>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="guglielmo.gemignani@gmail.com">Guglielmo Gemignani</maintainer>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/self_test</url>
<!-- <url type="bugtracker"></url> -->

  <author>Jeremy Leibs and Blaise Gassend</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>diagnostic_updater</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->
</package>
