<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>self_test</name>
  <version>3.1.2</version>
  <description>self_test</description>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <maintainer email="Christian.Henkel2@de.bosch.com">Christian Henkel</maintainer>
  <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">http://www.ros.org/wiki/self_test</url>

  <author>Jeremy Leibs and Blaise Gassend</author>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ros_environment</build_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
