<package format="2">
  <name>test_diagnostic_aggregator</name>
  <version>1.9.0</version>
  <description>Basic diagnostic_aggregator tests are  in the</description>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/test_diagnostic_aggregator</url>
<!-- <url type="bugtracker"></url> -->

  <author>Kevin Watts</author>

  <buildtool_depend>ament</buildtool_depend>

  <build_depend version_gte="1.8.9">diagnostic_aggregator</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend version_gte="1.8.9">diagnostic_aggregator</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- <test_depend>pluginlib</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->
  <!-- <test_depend>diagnostic_aggregator</test_depend> -->
  <!-- <test_depend>rclcpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
    <diagnostic_aggregator plugin="${prefix}/test_diagnostic_aggregator_plugin.xml"/>
    <architecture_independent/>
  </export>
</package>
