<package>
  <name>test_diagnostic_aggregator</name>
  <version>1.9.3</version>
  <description>Basic diagnostic_aggregator tests are  in the</description>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <maintainer email="karsten.knese@us.bosch.com">Karsten Knese</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/test_diagnostic_aggregator</url>
<!-- <url type="bugtracker"></url> -->

  <author>Kevin Watts</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="1.8.9">diagnostic_aggregator</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend version_gte="1.8.9">diagnostic_aggregator</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <!-- <test_depend>pluginlib</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->
  <!-- <test_depend>diagnostic_aggregator</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->

  <export>
    <diagnostic_aggregator plugin="${prefix}/test_diagnostic_aggregator_plugin.xml"/>
    <architecture_independent/>
  </export>
</package>
