<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bond</name>
  <version>1.8.4</version>
  <description>
    A bond allows two processes, A and B, to know when the other has
    terminated, either cleanly or by crashing.  The bond remains
    connected until it is either broken explicitly or until a
    heartbeat times out.
  </description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">http://www.ros.org/wiki/bond</url>
  <url type="bugtracker">https://github.com/ros/bond_core/issues</url>
  <url type="repository">https://github.com/ros/bond_core</url>
  <author>Stuart Glaser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>builtin_interfaces</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
