<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>bondcpp</name>
  <version>1.8.4</version>
  <description>
    C++ implementation of bond, a mechanism for checking when
    another process has terminated.
  </description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">http://www.ros.org/wiki/bondcpp</url>
  <url type="bugtracker">https://github.com/ros/bond_core/issues</url>
  <url type="repository">https://github.com/ros/bond_core</url>
  <author>Stuart Glaser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <build_export_depend>rmw</build_export_depend>
  <build_export_depend>builtin_interfaces</build_export_depend>
  <build_export_depend>rcl_interfaces</build_export_depend>
  
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>bond</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>smclibcpp</build_depend>
  <build_depend>uuid</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend>
  <exec_depend>bond</exec_depend>
  <exec_depend>smclibcpp</exec_depend>
  <exec_depend>uuid</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
