<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_bond</name>
  <version>1.8.4</version>
  <description>
     Contains tests for [[bond]], including tests for [[bondcpp]].
  </description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">http://www.ros.org/wiki/test_bond</url>
  <url type="bugtracker">https://github.com/ros/bond_core/issues</url>
  <url type="repository">https://github.com/ros/bond_core</url>
  <author>Stuart Glaser</author>

  <build_depend>ament_cmake</build_depend>
  <build_depend>test_bond_srv_gen</build_depend>
  <build_depend>bondcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>bondcpp</exec_depend>
  <exec_depend>test_bond_srv_gen</exec_depend>
 
  <test_depend>test_bond_srv_gen</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>bondcpp</test_depend>
  <test_depend>uuid</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
